force-app/main/default/objects/Integration_Setting__mdt/Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Stores integration configuration settings for external systems and APIs</description>
    <label>Integration Setting</label>
    <pluralLabel>Integration Settings</pluralLabel>
</CustomObject>