force-app/main/default/objects/Integration_Setting__mdt/fields/Session_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Session_Timeout__c</fullName>
    <label>Session Timeout</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>