force-app/main/default/objects/Integration_Setting__mdt/fields/Webservice_URL__c.field-meta.xml
<CustomField>
    <fullName>Webservice_URL__c</fullName>
    <label>Webservice URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>